POR/RefEdge/src/objects/Hit_List__c.object
<CustomObject>
    <description>Hit List(Bound 4)</description>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Reference_Profile__r.Account__r.Owner.FirstName  &amp;&quot; &quot;&amp;   Reference_Profile__r.Account__r.Owner.LastName</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Request</label>
        <referenceTo>Reference_Request_Account__c</referenceTo>
        <relationshipLabel>Hit Lists</relationshipLabel>
        <relationshipName>Hit_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hit Lists</relationshipLabel>
        <relationshipName>Hit_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionAccount_f__c</fullName>
        <formula>IF(  OR(ISPICKVAL(Disposition__c,&apos;&apos;),ISPICKVAL(Disposition__c,&apos;Contacted&apos;)),HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;AssignAction?Id=&apos;+ Id + &apos;&amp;retURl=&apos;+ Account__c, &apos;Assign&apos;, &apos;_self&apos;),&apos;Assign&apos;)+&apos;|&apos;+ IF(OR(ISPICKVAL(Disposition__c,&apos;&apos;),ISPICKVAL(Disposition__c,&apos;Contacted&apos;)),HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;ReminderAction?Id=&apos;+ Id + &apos;&amp;retURl=&apos;+ Account__c, &apos;Reminder&apos;, &apos;_self&apos;),&apos;Reminder&apos;) +&apos;|&apos;+  IF(  OR(ISPICKVAL(Disposition__c,&apos;&apos;),ISPICKVAL(Disposition__c,&apos;Contacted&apos;)) , HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;HitListReleaseAction?Id=&apos;+ Id +&apos;&amp;retURl=&apos;+ Account__c, &apos;Release&apos;, &apos;_self&apos;), &apos;Release&apos;)</formula>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionContact_f__c</fullName>
        <formula>IF( OR(ISPICKVAL(Disposition__c,&apos;&apos;),ISPICKVAL(Disposition__c,&apos;Contacted&apos;)),HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;AssignAction?Id=&apos;+ Id + &apos;&amp;retURl=&apos;+ Contact__c , &apos;Assign&apos;, &apos;_self&apos;),&apos;Assign&apos;)+&apos;|&apos;+ IF(OR(ISPICKVAL(Disposition__c,&apos;&apos;),ISPICKVAL(Disposition__c,&apos;Contacted&apos;)),HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;ReminderAction?Id=&apos;+ Id + &apos;&amp;retURl=&apos;+ Contact__c , &apos;Reminder&apos;, &apos;_self&apos;),&apos;Reminder&apos;) +&apos;|&apos;+ IF( OR(ISPICKVAL(Disposition__c,&apos;&apos;),ISPICKVAL(Disposition__c,&apos;Contacted&apos;)) , HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;HitListReleaseAction?Id=&apos;+ Id +&apos;&amp;retURl=&apos;+ Contact__c , &apos;Release&apos;, &apos;_self&apos;), &apos;Release&apos;)</formula>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Invite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Invite</label>
        <referenceTo>Community_Invite__c</referenceTo>
        <relationshipLabel>Hit Lists</relationshipLabel>
        <relationshipName>Hit_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hit Lists</relationshipLabel>
        <relationshipName>Hit_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Agreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released: Contact Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released: Contact Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released: No Longer Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Hit Lists</relationshipLabel>
        <relationshipName>Hit_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reference_Owner__c</fullName>
        <formula>IF(AND(ISBLANK(Reference_Profile__r.Reference_Owner__r.FirstName), ISBLANK(Reference_Profile__r.Reference_Owner__r.LastName)) , 
Reference_Profile__r.Account__r.Owner.FirstName &amp;&quot; &quot;&amp; Reference_Profile__r.Account__r.Owner.LastName, 
Reference_Profile__r.Reference_Owner__r.FirstName &amp; &quot; &quot; &amp; Reference_Profile__r.Reference_Owner__r.LastName)</formula>
        <label>Reference Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Profile</label>
        <referenceTo>Reference_Basic_Information__c</referenceTo>
        <relationshipLabel>Hit Lists</relationshipLabel>
        <relationshipName>Hit_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Request</label>
        <referenceTo>Reference_Request__c</referenceTo>
        <relationshipLabel>Hit Lists</relationshipLabel>
        <relationshipName>Hit_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referenceability_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referenceability Type</label>
        <referenceTo>Referenceability_Type__c</referenceTo>
        <relationshipLabel>Hit Lists</relationshipLabel>
        <relationshipName>Hit_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Released__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Released</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unspecified_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unspecified Request</label>
        <referenceTo>Unspecified_Request__c</referenceTo>
        <relationshipLabel>Hit Lists</relationshipLabel>
        <relationshipName>Hit_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Hit List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Reference_Request__c</columns>
        <columns>Account_Request__c</columns>
        <columns>Disposition__c</columns>
        <columns>Released__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HL-{0000}</displayFormat>
        <label>Hit List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hit Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>